[project]
name = "emoji-search"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "numpy>=1.26.0",
    "openai>=2.36.0",
    "python-multipart>=0.0.20",
    "sentence-transformers>=3.0.0",
    "uvicorn>=0.30.0",
]
